Fixed Overlapping Tables for Mobile Phones

--- a/pages/timing.html
+++ b/pages/timing.html
@@ -40,34 +40,34 @@
               <th class="">Evening Time</th>
             </tr>
           </thead>
-          <tbody>
+           <tbody>
             <tr>
-              <th class="">Monday</td>
+              <td class="">Monday</td>
               <td class="timing">8:30AM - 2:00PM</td>
               <td class="timing">5:30PM - 9:00PM</td>
             </tr>
             <tr>
-              <th class="">Tuesday</td>
+              <td class="">Tuesday</td>
               <td class="timing">8:30AM - 2:00PM</td>
               <td class="timing">5:30PM - 9:00PM</td>
             </tr>
             <tr>
-              <th class="wed">Wednesday</td>
+              <td class="wed">Wednesday</td>
               <td class="timing">8:30AM - 2:00PM</td>
               <td class="timing">5:30PM - 9:00PM</td>
             </tr>
             <tr>
-              <th class="">Thursday</td>
+              <td class="">Thursday</td>
               <td class="timing">8:30AM - 2:00PM</td>
               <td class="timing">5:30PM - 9:00PM</td>
             </tr>
           <tr>
-            <th class="">Friday</td>
+            <td class="">Friday</td>
           <td class="timing">8:30AM - 2:00PM</td>
           <td class="timing">5:30PM - 9:00PM</td>
         </tr>
         <tr>
-          <th class="">Saturday</td>
+          <td class="">Saturday</td>
           <td class="timing">8:30AM - 2:00PM</td>
           <td class="timing">5:30PM - 9:00PM</td>
         </tr>
