--- a/pages/contact.html
+++ b/pages/contact.html
@@ -80,7 +80,7 @@
           <input type="email" placeholder="your email" class="box">
             <input type="text" placeholder="enter your name" class="box">
           <input type="text" placeholder="Give Feedback or Support Message" class="problem">
-          <input type="submit" value="Book Now" class="btn">
+          <input type="submit" value="Send Us" class="btn">
         </form>
         </div>
     </section>
